--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/elrick85/elrick85.github.io",
   "devDependencies": {
     "bootstrap": "^3.3.2",
+    "font-awesome": "^4.3.0",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.0",
